# OOP-labs

./: CMakeLists.txt  main.cpp  test_number.cpp
lab1/: CMakeLists.txt  Readme.md  main.cpp  number.cpp  number.h
lab1/src/: number.cpp  number.h
lab1/tests/: test_number.cpp
tests/: test_number.cpp
